alteracoes no projeto

--- a/styless/header.css
+++ b/styless/header.css
@@ -12,6 +12,10 @@
     .container__titulo, .container__frase{
     display:none;
     }
+
+
+
+
     @media screen and (min-width: 820px) {
         .container__titulo, .container__titulo--negrito {
             font-size: 30px;
@@ -22,3 +26,10 @@
         display: block;
     }
 }
+    @media screen and (min-width: 1024px) {
+        .container__frase{
+            padding-left: 5em;
+            font-size: 20px;
+            display: block;
+        }
+    }
